# slovak-feed-sentinel

./: .gitignore  README.md
server/: DOCKERFILE  README.md  pyproject.toml
server/slovak_feed_sentinel/: rss_catcher.py
