[tool.poetry]
name = "slovak-feed-sentinel"
version = "0.1.0"
description = "An all-in-one solution featuring a Python-based RSS feed scraper, sentiment analyzer, and a frontend web UI for visualizing and storing data in a PostgreSQL database."
authors = ["tonil00 <cipelanton@gmail.com>"]
readme = "README.md"
packages = [{include = "slovak_feed_sentinel"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.3"
feedparser = "^6.0.11"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
transformers = "^4.47.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rss-catcher = "slovak_feed_sentinel.rss_catcher:main"
